# find-the-occurrence-of-first-almost-equal-substring

./: Cargo.toml  README.md
src/: lib.rs
